Edición y agregado de promociones corregidos. Se elimina el wrap en el fixture. Agregado de links con estilos
git-svn-id: https://proyectonahual.svn.sourceforge.net/svnroot/proyectonahual@40 a13fab5c-0f33-4981-bb68-7b228bfc57fb

--- a/cursos/testing/src/nahual.promociones/nahual/promociones/promociones.css
+++ b/cursos/testing/src/nahual.promociones/nahual/promociones/promociones.css
@@ -22,6 +22,13 @@ h1
 {
 	padding: 0 25px 0 0;
 	display:inline-block;
+	color: #ffffff;
+}
+.menu>li>a
+{
+	padding: 0 25px 0 0;
+	display:inline-block;
+	color: #ffffff;
 }
 .footer
 {
@@ -32,6 +39,10 @@ h1
 	height:15px;
 	background-color:#007fff;
 	border-radius:7px;
+}
+.footer>a
+{
+	color:#ffffff;
 }
 .add {
 	margin: 20px;
